# src/controllers/ventasController.ts
@@ -3,18 +3,18 @@ import pool from '../database';
 
 class VentasController{
 public async list(req: Request, res: Response ): Promise<void>{
-    const respuesta = await pool.query('SELECT * FROM ventas');
+    const respuesta = await pool.query('SELECT ventas.id, ventas.idPagoCarrito, clientes.nombre as Cliente, usuarios.nombre as Usuario, ventas.fecha, pagarcarritos.total as total  FROM ventas,clientes,usuarios,pagarcarritos WHERE clientes.id = ventas.idCliente AND usuarios.id = ventas.idUsuario AND pagarcarritos.id = ventas.idPagoCarrito');
     res.json( respuesta );
 }
 
 public async listOne(req: Request, res: Response): Promise <void>{
-const {id} = req.params;
-const respuesta = await pool.query('SELECT * FROM ventas WHERE id = ?', [id]);
-if(respuesta.length>0){
-res.json(respuesta[0]);
-return ;
-}
-res.status(404).json({'mensaje': 'venta no encontrada'});
+    const {id} = req.params;
+    const respuesta = await pool.query('SELECT ventas.id, ventas.idPagoCarrito, clientes.nombre as Cliente, usuarios.nombre as Usuario, ventas.fecha, pagarcarritos.total as total  FROM ventas,clientes,usuarios,pagarcarritos WHERE clientes.id = ventas.idCliente AND usuarios.id = ventas.idUsuario AND pagarcarritos.id = ventas.idPagoCarrito  AND ventas.id = ?', [id]);
+    if(respuesta.length>0){
+    res.json(respuesta[0]);
+    return ;
+    }
+    res.status(404).json({'mensaje': 'venta no encontrada'});
 }
 
 public async create(req: Request, res: Response): Promise<void> {
@@ -24,17 +24,25 @@ public async create(req: Request, res: Response): Promise<void> {
 }
 
 public async update(req: Request, res: Response): Promise<void> {
-const { id } = req.params;
-//console.log(req.params);
-console.log(id);
-const resp = await pool.query("UPDATE ventas set ? WHERE id = ?", [req.body, id]);
-res.json(resp);
+    const { id } = req.params;
+    const consultaIdUsuario = `SELECT usuarios.id as idUsuario FROM usuarios WHERE usuarios.nombre = '${req.body.Usuario}'`;
+    const resp1 = await pool.query(consultaIdUsuario);
+    const conusltaIdCliente = `SELECT clientes.id as idCliente FROM clientes WHERE clientes.nombre = '${req.body.Cliente}'`;
+    const resp2 = await pool.query(conusltaIdCliente);
+    if (resp1.length == 0 || resp2.length == 0){
+        res.status(404).json({'mensaje': 'Usuario o Cliente no encontrado'});
+        return;
+    }else{
+        const resp = await pool.query(`UPDATE ventas SET ventas.idPagoCarrito = ${req.body.idPagoCarrito}, ventas.idCliente = ${resp2[0].idCliente}, ventas.idUsuario = ${resp1[0].idUsuario}, ventas.fecha = "${req.body.fecha}" WHERE ventas.id = ${id}`);
+        res.json(resp);
+    }
+
 }
 
 public async delete(req: Request, res: Response): Promise<void> {
-const { id } = req.params;
-const resp = await pool.query(`DELETE FROM ventas WHERE id = ${id}`);
-res.json(resp);
+    const { id } = req.params;
+    const resp = await pool.query(`DELETE FROM ventas WHERE id = ${id}`);
+    res.json(resp);
 }
 
 public async listarventasfecha(req: Request, res: Response): Promise<void> {
